# VuLLM

./: .clang-format  .gitattributes  .gitignore  .gitmodules  README.md  build_grammar.sh  config.json  pixi.toml  pyproject.toml
DiverseVul/processed/: balanced_c_diversevul.jsonl  balanced_diversevul.jsonl  gpt_reasoning.jsonl  rusty_diversevul.jsonl  stratify_diversevul.jsonl
DiverseVul/processed/metadata/: metadata_balancing.txt
accelerate/: 2gpus.yaml  3gpus.yaml  4gpus.yaml
benches/knowledge/: test_bench_graph.py
deepspeed/: deepspeed_zero3.json  stage2_config.json  stage3_config.json
rusty/: Cargo.toml  pixi.toml
rusty/src/: lib.rs  main.rs
rusty/src/cache/: cache.json
rusty/src/mitre/: cwe_comprehensive_view.csv
rusty/src/processor_lib/: code_foundry.rs  code_sanitizer.rs  cwe_descriptions.rs  feature_extractor.rs  lazy.rs  loader.rs  logger.rs  macros.rs  mod.rs  parser_pool.rs  processor.rs  thread_pool_builder.rs  tree_sitter_parser.rs  tree_sitter_parser_bak.rs  utils.rs
rusty/tests/: common.rs  test_foundry.rs  test_helpers.rs  test_processor.rs  test_sanitizer.rs  test_utils.rs
scripts/: 1l40s.sh  2l40s.sh  a30s.sh  l40s.sh  single_l40s.sh  single_l40s_inference.sh
scripts/cot_assessment/: 2l40s.sh  2l40s_single.sh  deepseek_safe.sh  deepseek_vul.sh  llama_safe.sh  llama_vul.sh  phi_safe.sh  phi_vul.sh  qwen72_safe.sh  qwen72_vul.sh  qwen_safe.sh  qwen_vul.sh
scripts/finetuning/: 1a30s_inf.sh  1l40s_inf.sh  2a30s_inf.sh  2l40s.sh  4a30s.sh
setup/: deps.yml  setup.sh  setup_dev.sh
src/common/: common_typedef.py  loading_config.py  logging_config.py  tree_sitter_parser.py
src/core/: dataset_handler.py  model_handler.py
src/core/baseline/: dataset_handler.py  main.py
src/core/chunking_and_streaming/: chunking.py  dataset.py  decorators.py  inference_pipeline.py  legacy_inference.py  legacy_trainer.py  logits_processor.py  main.py  model.py  prompt_strategies.py  run_fine_tune.py  run_test.py  torch_test.py  typedef.py  unsloth_fine_tuner.py  unsloth_inference.py  unsloth_model.py  unsloth_test.py  unsloth_trainer.py  utils.py
src/core/common/: logging_config.py
src/core/cot_training/: cli.py  loader_config.py  logging_config.py  (+1 more)
src/dataset/: gemini.py  handler.py  prova.c  todo.md  utils.py
src/test_env_integrity/: pytorch.py
text_prompts/: inference_attacks_only.txt  inference_free_hierarchy.txt  inference_free_no_hierarchy.txt  inference_mode_optimistic.txt  inference_mode_pessimistic.txt  inference_none.txt  inference_optimistic_hierarchy.txt  inference_optimistic_no_hierarchy.txt  inference_pessimistic_hierarchy.txt  inference_pessimistic_no_hierarchy.txt  readme.md  training_no_assumptions_hierarchy.txt  training_no_assumptions_no_hierarchy.txt  training_optimistic_hierarchy.txt  training_optimistic_no_hierarchy.txt  training_pessimistic_hierarchy.txt  training_pessimistic_no_hierarchy.txt  training_prompt_no_assumptions.txt  training_prompt_optimistic.txt  training_prompt_pessimistic.txt
text_prompts/v1/: training_pessimistic.txt  training_pessimistic_hierarchy.txt
text_prompts/v2/: inference_free.txt  inference_free_cwe.txt  inference_optimistic.txt  inference_optimistic_cwe.txt  inference_pessimistic.txt  inference_pessimistic_cwe.txt  training_no_assumptions_none.txt  training_no_assumptions_none_hierarchy.txt  training_optimistic.txt  training_optimistic_hierarchy.txt  training_pessimistic.txt  training_pessimistic_cwe.txt  training_pessimistic_hierarchy.txt
(+267 files in other folders)
