[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vullm_pipeline"
version = "0.1.0"

# Tells setuptools that your packages are in the 'src' directory
[tool.setuptools.packages.find]
where = ["src"]

# Tells pytest to add the 'src' directory to the python path before running tests
[tool.pytest.ini_options]
pythonpath = ["src"]

markers = [
    "slow_gpu: marks tests as slow to run, requires a GPU",
    "slow_api: marks tests as slow slow, requires an API Key"
]


# [tool.pyright]
# # Define the top-level directories that pyright should analyze.
# include = ["src", "tests"]
# reportUnusedVariable = "warning" # default level
#
# # --- configuration for diable rules ---
# executionEnvironments = [
#   { root = "tests", reportUnusedVariable = false },
#   { root = "src" }
# ]
