[package]
name = "data_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bincode = "2.0.1"
chrono = "0.4.41"
clap = "4.5.47"
colored = "3.0.0"
core_affinity = "0.8.3"
csv = "1.3.1"
fern = { version = "0.7.1", features = ["colored"] }
indicatif = { version = "0.18.0", features = ["rayon"] }
log = "0.4.27"
lru = "0.16.1"
num_cpus = "1.17.0"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.22.0"
thread-priority = "3.0.0"
tiktoken-rs = "0.7.0"
tree-sitter = "0.26.3"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
which = "8.0.0"

[dev-dependencies]
rstest = "0.26.1"
